After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 725560 - GtkTreeView documentation fixes
GtkTreeView documentation fixes
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
3.11.x
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2014-03-03 10:52 UTC by Phillip Wood
Modified: 2014-03-03 23:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GtkTreeView documentation fixes (3.07 KB, patch)
2014-03-03 10:52 UTC, Phillip Wood
committed Details | Review

Description Phillip Wood 2014-03-03 10:52:45 UTC
Document GtkTreeView::move-cursor and add a couple of links to the
documentation for gtk_tree_view_set_reorderable().
Comment 1 Phillip Wood 2014-03-03 10:52:48 UTC
Created attachment 270769 [details] [review]
GtkTreeView documentation fixes

Add documentation for GtkTreeView::move-cursor

Add links to GtkTreeModel::row-inserted and GtkTreeModel::row-deleted
in the documentation for gtk_tree_view_set_reorderable ().
Comment 2 Matthias Clasen 2014-03-03 23:22:13 UTC
Attachment 270769 [details] pushed as c3945d5 - GtkTreeView documentation fixes